# orderly-industry

./: .cursorrules  .gitignore  .gitmessage  23171_Legora Logo.avif  CONTRIBUTING.md  DEVOPS_LIFECYCLE.md  Developer_Prompt_Contract_AI.md  ENV_SETUP.md  ENV_VARIABLES_COMPLETE.md  IQL_PLAYBOOK_CONTRACT_OF_SALE.md  IQL_PLAYBOOK_SECTION_32(1).md  ONBOARDING.md  README.md  STAGING_DISABLED.md  Sample_Service_Agreement.docx  generated-page (1).html  package.json  pnpm-lock.yaml  test.txt
.cursor/commands/: speckit.commit.md  speckit.debug.md  speckit.implement.md  speckit.pr.md
.cursor/rules/: specify-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/prompts/: plan.prompt.md  specify.prompt.md  tasks.prompt.md
.github/workflows/: ci-agent.yml  ci-database.yml  ci-frontend.yml  deploy-agent.yml  preview-agent.yml  preview-supabase.yml
.husky/: commit-msg  pre-commit
.specify/memory/: constitution.md
.specify/specs/: agent-architecture.md  authentication-flow.md  database-schema.md  frontend-chat-ui.md
apps/agent/: .env.example  ARCHITECTURE.md  README.md  langgraph.json  pyproject.toml
apps/agent/src/: __init__.py
apps/agent/src/agent/: __init__.py  graph.py  prompts.py
apps/agent/src/agents/: __init__.py  document_agent.py
apps/agent/src/http/: __init__.py  routes.py
apps/agent/src/security/: __init__.py  auth.py
apps/agent/src/services/: __init__.py  deepseek_ocr.py  document_processor.py  isaacus_client.py  structure_extractor.py
apps/agent/src/tools/: __init__.py  extract_structure.py  get_document_text.py  isaacus_classify.py  isaacus_extract.py  isaacus_iql.py  isaacus_search.py  legal_answer.py  legal_classify.py  list_matter_documents.py
apps/frontend/: .env.example  README.md  next.config.mjs  package.json
contract_of_sale/: 00_ORIGINAL_TEMPLATE_BLANK.docx  01_Contract_CAV_CLEAN.docx  02_Contract_CAV_MEDIUM.docx  03_Contract_CAV_HIGH_FLAGS.docx
docs/: DEVOPS_LIFECYCLE.md  README.md  STAGING_DISABLED.md  TROUBLESHOOTING_AUTH.md
scripts/: test-search.sh  verify-data.sql
section32/: 01_Section32_CLEAN.docx  02_Section32_MEDIUM.docx  03_Section32_HIGH_FLAGS.docx
specs/001-isaacus-iql-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-langsmith-preview-deploys/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-isaacus-agent-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-supabase-persistence/: spec.md
specs/003-harvey-ai-clone/: plan.md
specs/004-matters-documents/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-document-ingestion-grounding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
supabase/: config.toml  email-templates.md
test-documents/: generate_docs.py
(+204 files in other folders)
