[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Deep research agent with Supabase authentication"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.6",
    "langchain>=0.3.0",
    "langchain-openai>=1.0.2",
    "langchain-anthropic>=1.0.3",
    "langchain-google-genai>=3.1.0",
    "langchain_tavily>=0.2.13",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.1.55",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "isaacus>=0.1.3",
    "tavily-python>=0.5.0",
    "markdownify>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    # Document processing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pymupdf>=1.24.0",  # Better PDF extraction + image rendering for OCR
    "mammoth>=1.8.0",   # DOCX to HTML with structure preservation
    "striprtf>=0.0.26", # RTF text extraction
    # Structure extraction (for hierarchical document parsing)
    "unstructured>=0.16.0",  # Structure-preserving document parsing
    "python-magic>=0.4.27; sys_platform == 'linux'",  # File type detection (Linux)
    "python-magic-bin>=0.4.14; sys_platform != 'linux'",  # File type detection (Windows/macOS)
    # Supabase client
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=8.0.0",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
]
lint.ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

